# NoMans-OS

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
