[package]
name = "noman_os"
version = "0.1.0"
edition = "2021"
authors = ["Noman Nasir Minhas <contact.nomanminhas@gmail.com>"]
# cargo build --target thumbv7em-none-eabihf
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
