[package]
name = "noman_os"
version = "0.1.0"
edition = "2021"
authors = ["Noman Nasir Minhas <contact.nomanminhas@gmail.com>"]
# cargo build --target thumbv7em-none-eabihf
# cargo build --target x86_64-noman_os.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"